--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-aniso8601==8.1.0
-astroid==2.4.2
+aniso8601==8.1.1
+astroid==2.5
 click==7.1.2
 colorama==0.4.4
 dnspython==2.0.0
 email-validator==1.1.2
 Flask==1.1.2
-Flask-JWT-Extended==3.25.0
 flask-mongoengine==1.0.0
 Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
@@ -18,11 +17,15 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 PyJWT==1.7.1
 pylint==2.6.0
-pymongo==3.11.2
+pymongo==3.11.3
 python-dotenv==0.15.0
-pytz==2020.5
+pytz==2021.1
 six==1.15.0
 toml==0.10.2
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.3
+
+mongoengine~=0.22.1
+passlib~=1.7.4
+APScheduler~=3.7.0
