--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.0.0
 email-validator==1.1.2
 Flask==1.1.2
 flask-mongoengine==1.0.0
+flask_cors
 Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
 idna==3.0
@@ -15,8 +16,9 @@ Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-PyJWT==1.7.1
-pylint==2.6.0
+# PyJWT==1.7.1
+PyJWT==2.0.1
+pylint==2.7.2
 pymongo==3.11.3
 python-dotenv==0.15.0
 pytz==2021.1
