--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,48 @@
 aniso8601==8.1.1
+APScheduler==3.7.0
 astroid==2.5
+atomicwrites==1.4.0
+attrs==20.3.0
+autopep8==1.5.4
 click==7.1.2
 colorama==0.4.4
 dnspython==2.0.0
 email-validator==1.1.2
 Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.0.2
 flask-mongoengine==1.0.0
-flask_cors
 Flask-RESTful==0.3.8
 Flask-WTF==0.14.3
+gunicorn==20.1.0
 idna==3.0
+iniconfig==1.1.1
 isort==5.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-# PyJWT==1.7.1
+mongoengine==0.22.1
+mongomock==3.22.1
+packaging==20.9
+passlib==1.7.4
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.6.0
 PyJWT==2.0.1
 pylint==2.7.2
+pylint-mongoengine==0.4.0
+pylint-plugin-utils==0.6
 pymongo==3.11.3
+pyparsing==2.4.7
+pytest==6.2.2
 python-dotenv==0.15.0
 pytz==2021.1
+sentinels==1.0.0
 six==1.15.0
 toml==0.10.2
+tzlocal==2.1
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.3
-
-mongoengine~=0.22.1
-passlib~=1.7.4
-APScheduler~=3.7.0
